fix(style): use eui scrollbar

--- a/packages/charts/src/components/tooltip/_tooltip.scss
+++ b/packages/charts/src/components/tooltip/_tooltip.scss
@@ -140,6 +140,7 @@ $tableRowHoverSelectedColor: tintOrShade($euiFocusBackgroundColor, 0, 10%);
 
   &__tableWrapper {
     overflow: auto;
+    @include euiScrollBar;
   }
 
   &__table {
